build/readiness-app/objects/inc_APIUser_Keys__mdt.object
<CustomObject>
    <description>Stores Access key and access secret which is used for generating access and refresh tokens for report API&#39;s calls.</description>
    <label>inContact API User Keys</label>
    <pluralLabel>inContact API User Keys</pluralLabel>
    <fields>
        <fullName>accessKeyId__c</fullName>
        <description>accessKeyId</description>
        <label>accessKeyId</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>accessKeySecret__c</fullName>
        <description>accessKeySecret</description>
        <label>accessKeySecret</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>resourceUrl__c</fullName>
        <description>Resource URL used in API calls. Don&#39;t modify it.</description>
        <label>Resource URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UH_Base_URL__c</fullName>
        <description>User Hub Base URL for calling get access token API</description>
        <inlineHelpText>User Hub Base URL</inlineHelpText>
        <label>UH Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>